blockml/test/errors/10_filter/e105/e105d.dashboard
dashboard: e105d
title: 'sales'
fields:
- filter: size
  result: number
  default:      
  - 'abc'

reports:
- title: 'abc'
  model: e105m
  select:
  - a.dim1
  type: table

